# plex-letterboxd

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  compare.py  config.example.yaml  exporter.py  pyproject.toml  requirements.txt  run.sh  test.sh
lib/: client.py  config.py  csv.py
plex_letterboxd/: __init__.py  cli.py  client.py  config.py  csv.py
systemd/: plex-letterboxd.service  plex-letterboxd.timer
